# Docme

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  TASK_AUTOMATION_SETUP.md  docme.json  reference.txt  todo.md
.VSCodeCounter/2026-07-19_18-09-05/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cache/clangd/index/: abi_macros.hpp.4185874AEF9947C0.idx  abi_macros.hpp.45D16F9133AC266E.idx  adl_serializer.hpp.1BFC987E4DCE8088.idx  adl_serializer.hpp.45338DA41C09FBBC.idx  begin.hpp.54F41454178E66A1.idx  begin.hpp.F3465702B7B68A73.idx  betterDynamicLibraries.hpp.0B1B404699E89F1B.idx  betterDynamicLibraries.hpp.91168658AB90EFCF.idx  betterLogger.hpp.063D0369295DD734.idx  betterLogger.hpp.55B9AFF6CB0CA755.idx  binary_reader.hpp.042524963763D5D1.idx  binary_reader.hpp.6073A76E6E78E78B.idx  binary_writer.hpp.3DB55183C87DFF30.idx  binary_writer.hpp.EBD097E07E3EC805.idx  byte_container_with_subtype.hpp.38B469A9F1F1D078.idx  byte_container_with_subtype.hpp.8D7D0963FA481800.idx  commandLine.cpp.4DDFB0E11FB714EB.idx  commandLine.cpp.81A4F5F1552AEBE9.idx  commandLine.hpp.05973821EA81ACD2.idx  commandLine.hpp.39499F2886E6F9F1.idx  cppTools.hpp.4E3770307F740D07.idx  cppTools.hpp.DFF6D65FF1AB401D.idx  cpp_future.hpp.10DDFE7F671C7EDF.idx  cpp_future.hpp.B4070C3503A034C5.idx  debugging.cpp.00840D4A6CC7B20B.idx  debugging.cpp.5053057398453D46.idx  debugging.hpp.557048862A22CE98.idx  debugging.hpp.720AB7F5868266C5.idx  debugging.tpp.12B5F9BD1A068DC0.idx  debugging.tpp.5D7C0443A9092E0A.idx  defaultLogStacks.cpp.5256F46941ECF5FB.idx  defaultLogStacks.cpp.88805D185D50FFF6.idx  (+146 more)
autoDoc/: CMakeLists.txt  autoDoc.hpp
autoDoc/genorator/: CMakeLists.txt  genorator.hpp  main.cpp
autoDoc/genorator/header/: commandLineParser.hpp  conceptTypes.hpp  constants.hpp  helpers.hpp  nodes.hpp
autoDoc/genorator/source/: commandLineParser.cpp  helpers.cpp  nodes.cpp
autoDoc/header/: cdocs.hpp  debugging.hpp  externalLibs.hpp  macroSetup.hpp  standardLibs.hpp
autoDoc/source/: debugging.cpp
cmake/: CMakeLists.txt
common/header/: cdocs.hpp
docme/: CMakeLists.txt  docme.cpp  docme.hpp  docme.mpp  error.cpp  error.mpp  main.cpp  os.hpp  processor.hpp  std.hpp
docme/app/: CMakeLists.txt  app.hpp  app.mpp  commands.cpp  commands.mpp  errors.cpp  errors.mpp  errors.tpp  warnings.cpp  warnings.mpp  warnings.tpp
docme/cdoc/: CMakeLists.txt  cdoc.hpp
docme/cdoc/header/: nodes.hpp  packets.hpp
docme/cdoc/source/: nodes.cpp  packets.cpp
docme/cli/: CMakeLists.txt  application.cpp  application.mpp  application.tpp  cli.cpp  cli.hpp  cli.mpp  errors.cpp  errors.mpp  errors.tpp  utils.cpp  utils.mpp  warnings.cpp  warnings.mpp  warnings.tpp
docme/config/: CMakeLists.txt  config.hpp  config.mpp  errors.cpp  errors.mpp  errors.tpp  file.cpp  file.mpp  options.mpp  schema.mpp  settings.cpp  settings.mpp  utils.cpp  utils.mpp  warnings.cpp  warnings.mpp  warnings.tpp
docme/core/: CMakeLists.txt  core.hpp  core.mpp  errors.cpp  errors.mpp  failure.cpp  failure.mpp  json.cpp  json.mpp  json.tpp  library.cpp  library.mpp  library.tpp  logging.cpp  logging.mpp  logging.tpp  result.mpp  result.tpp  success.cpp  success.mpp  success.tpp  timer.cpp  timer.mpp  utils.cpp  utils.mpp  warnings.cpp  warnings.mpp
docme/engine/: CMakeLists.txt  commands.cpp  commands.mpp  configFile.cpp  configFile.mpp  engine.hpp  engine.mpp  main.cpp  options.cpp  options.mpp  settings.cpp  settings.mpp
docme/engine/header/: commandLine.hpp  docmeEngine.hpp  generator.hpp  nodeManagers.hpp  nodes.hpp  packets.hpp  parser.hpp
docme/engine/header/deprecated/: nodes.hpp
docme/engine/source/: commandLine.cpp  docmeEngine.cpp  generator.cpp  nodes.cpp  nodes.tpp  packets.cpp  parser.cpp
docme/engine/test/: commandLine.cpp
docme/generator/: CMakeLists.txt  errors.cpp  errors.mpp  errors.tpp  generator.hpp  generator.mpp  generatorInfo.cpp  generatorInfo.mpp  languageHandler.cpp  languageHandler.mpp  parser.cpp  parser.mpp  parserContext.cpp  parserContext.mpp  renderer.cpp  renderer.mpp  rendererContext.cpp  rendererContext.mpp  utils.cpp  utils.mpp  warnings.cpp  warnings.mpp  warnings.tpp
docme/gui/: CMakeLists.txt  gui.hpp  gui.mpp  main.cpp
docme/header/: commandLine.hpp  commandLineParser.hpp  cppTools.hpp  debugging.hpp  docmeInfo.hpp  externalLibs.hpp  generator.hpp  jsonTools.hpp  nodeManagers.hpp  nodes.hpp  packets.hpp  parser.hpp  programVariables.hpp  restrictedTypes.hpp  standardLibs.hpp  testing.hpp
docme/package/parser/: CMakeLists.txt  main.cpp  parser.hpp
docme/package/parser/header/: commandLineParser.hpp  conceptTypes.hpp  constants.hpp  docPackets.hpp  nodes.hpp
docme/package/parser/source/: commandLineParser.cpp  docPackets.cpp  helpers.cpp  nodes.cpp
docme/package/processor/: CMakeLists.txt  main.cpp  processor.hpp
docme/package/processor/header/: commandLineParser.hpp  conceptTypes.hpp  constants.hpp  docPackets.hpp  docmeInfo.hpp  generator.hpp  nodes.hpp  parser.hpp  testing.hpp
docme/package/processor/header/n/: helpers.hpp
docme/package/processor/source/: commandLineParser.cpp  docPackets.cpp  docmeInfo.cpp  generator.cpp  helpers.cpp  parser.cpp
docme/package/processor/source/deprecated/: nodes.cpp
docme/plugin/: CMakeLists.txt  api.cpp  api.mpp  languageHandler.cpp  languageHandler.mpp  plugin.hpp  plugin.mpp
docme/processor/: CMakeLists.txt
docme/resource/doc packets/: cdoc.json  docme.json
docme/source/: commandLine.cpp  commandLineParser.cpp  debugging.cpp  debugging.tpp  generator.cpp  jsonTools.cpp  nodes.cpp  nodes.tpp  packets.cpp  parser.cpp
docs/: CDocStandard.md  Errors.md  Warnings.md
genorator/: main.cpp
genorator/header/: conceptTypes.hpp  constants.hpp  helpers.hpp  nodes.hpp
genorator/source/: helpers.cpp  nodes.cpp
packets/: cdoc.json
plugins/: CMakeLists.txt  plugins.hpp  std.hpp
plugins/cdoc/: CMakeLists.txt  cdoc.cpp  cdoc.hpp  cdoc.mpp  handler.cpp  handler.mpp  metadata.json
ref/: CDocStandard.md
resources/: pluginRegistry.json  templateConfigFile.json
